--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,15 @@ jobs:
         uses: actions/checkout@v2
         
       - name: "Create the paclet file"
-        run: wolframscript -code 'CreatePacletArchive[\"./TestPaclet/\"]'
+        run: |
+          $FILES = @(Get-ChildItem -Path './');
+          foreach ($file in $FILES) {
+            wolframscript -code 'CreatePacletArchive[\"./$file\"]';
+            Move-Item -Path ./$file-1.0.0.paclet -Destination ./$file/Paclets/$file-1.0.0.paclet
+            wolframscript -code 'PacletManager`BuildPacletSiteFiles[\"./$file\"]'
+          }
         
-      - name: "Move the file to 'Paclets' directory"
-        run: Move-Item -Path ./TestPaclet-1.0.0.paclet -Destination ./TestPaclet/Paclets/TestPaclet-1.0.0.paclet
-      
-      - name: "Create the Paclet Site file"
-        run: wolframscript -code 'PacletManager`BuildPacletSiteFiles[\"./TestPaclet/\"]'
-        
-      - name: "Commit the file"
+      - name: "Commit the files"
         run: |
           git add *
           git commit -m "Auto-generated and handled the PacletSite creation"
