--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,7 @@ jobs:
       - name: "Create the paclet file"
         run: |
           $FILES = @(Get-ChildItem -Path './') | Where-Object {$_ -notlike ".github"};
-          foreach ($file in $FILES) {
-            wolframscript -code "CreatePacletArchive[`"./$file`"]";
-            Move-Item -Path "./$file-1.0.0.paclet" -Destination "./$file/Paclets/$file-1.0.0.paclet"
-            wolframscript -code "PacletManager`BuildPacletSiteFiles[`"./$file`"]"
-          }
+          wolframscript -script "./Resources_/Scripts_/PacletBuilder.wls"
         
       - name: "Commit the files"
         run: |
