--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: "Create the paclet file"
         run: |
           $FILES = @(Get-ChildItem -Path './') | Where-Object {$_ -notlike ".github"};
-          wolframscript -script "./Resources_/Scripts_/PacletBuilder.wls"
+          wolframscript -script "./Resources_/Scripts_/PacletBuilder.wls" $FILES
         
       - name: "Commit the files"
         run: |
