--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -29,8 +29,24 @@ jobs:
     steps:
       - name: "Checkout repo"
         uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
+      - name: "Bump version and push tag"
+        id: tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: 'major'
+  job3:
+    runs-on: [self-hosted]
+    needs: [job2]
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v2
       - name: "Create release"
         uses: ncipollo/release-action@v1
         with:
           repo: "master"
           generateReleaseNotes: true
+          tag: ${{ steps.tag.outputs.new_tag }}
