--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -26,13 +26,15 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: [job]
+    outputs:
+      tag: ${{ steps.tagCreation.outputs.new_tag }}
     steps:
       - name: "Checkout repo"
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
       - name: "Bump version and push tag"
-        id: tag
+        id: tagCreation
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -49,4 +51,4 @@ jobs:
         with:
           repo: "master"
           generateReleaseNotes: true
-          tag: ${{ steps.tag.outputs.new_tag }}
+          tag: ${{ needs.job2.outputs.tag }}
