--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -51,3 +51,16 @@ jobs:
         with:
           generateReleaseNotes: true
           tag: ${{ needs.job2.outputs.tag }}
+  job4:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v2
+
+      - name: "Merge master into main"
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: master
+          target_branch: main
+          github_token: ${{ github.token }}
