--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -23,6 +23,7 @@ jobs:
           git add *
           git commit -m "Auto-generated and handled the PacletSite creation"
           git push -u origin
+  
   job2:
     runs-on: ubuntu-latest
     needs: [job]
@@ -33,6 +34,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+          
       - name: "Bump version and push tag"
         id: tagCreation
         uses: anothrNick/github-tag-action@1.36.0
@@ -40,23 +42,27 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: 'major'
+  
   job3:
     runs-on: ubuntu-latest
     needs: [job2]
     steps:
       - name: "Checkout repo"
         uses: actions/checkout@v2
+      
       - name: "Create release"
         uses: ncipollo/release-action@v1
         with:
           generateReleaseNotes: true
           tag: ${{ needs.job2.outputs.tag }}
+  
   job4:
     runs-on: ubuntu-latest
+    needs: [job3]
     steps:
       - name: "Checkout repo"
         uses: actions/checkout@v2
-
+      
       - name: "Merge master into main"
         uses: devmasx/merge-branch@master
         with:
