--- a/.github/workflows/DeployTesting.yml
+++ b/.github/workflows/DeployTesting.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  job:
+  deployPaclet:
     runs-on: [self-hosted]
     steps:
       - name: "Checkout my repository"
@@ -23,3 +23,35 @@ jobs:
           git add *
           git commit -m "Auto-generated and handled the PacletSite creation"
           git push -u origin
+  
+  createTag:
+    runs-on: ubuntu-latest
+    needs: [deployPaclet]
+    outputs:
+      tag: ${{ steps.tagCreation.outputs.new_tag }}
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
+          
+      - name: "Bump version and push tag"
+        id: tagCreation
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: 'minor'
+  
+  createRelease:
+    runs-on: ubuntu-latest
+    needs: [createTag]
+    steps:
+      - name: "Checkout repo"
+        uses: actions/checkout@v2
+      
+      - name: "Create release"
+        uses: ncipollo/release-action@v1
+        with:
+          generateReleaseNotes: true
+          tag: ${{ needs.createTag.outputs.tag }}
