--- a/.github/workflows/DeployTesting.yml
+++ b/.github/workflows/DeployTesting.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          DEFAULT_BUMP: 'minor'
+          DEFAULT_BUMP: 'patch'
   
   createRelease:
     runs-on: ubuntu-latest
