--- a/.github/workflows/DeployTesting.yml
+++ b/.github/workflows/DeployTesting.yml
@@ -55,3 +55,4 @@ jobs:
         with:
           generateReleaseNotes: true
           tag: ${{ needs.createTag.outputs.tag }}
+          commit: 'main'
