--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+          ref: 'master'
           
       - name: "Bump version and push tag"
         id: tagCreation
@@ -42,6 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: 'major'
+          RELEASE_BRANCHES: 'master'
   
   createRelease:
     runs-on: ubuntu-latest
