--- a/.github/workflows/DeployRelease.yml
+++ b/.github/workflows/DeployRelease.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           $FILES = @(Get-ChildItem -Path './') | Where-Object {$_ -notlike ".github" -and $_ -notlike "Resources_"};
           echo $FILES;
-          wolframscript -script "./Resources_/Scripts_/DeployRelease.wls" $FILES
+          wolframscript -script "./Resources_/Scripts_/DeployPaclets.wls" "major" $FILES
         
       - name: "Commit the files"
         run: |
